src/objects/OpportunityTeamMember.object
<CustomObject>
    <fields>
        <fullName>Area_Of_Responsibility__c</fullName>
        <label>Area Of Responsibility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <description>R5</description>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>